overflow hidden on update modal's textarea and fixed nav's first child padding

--- a/src/Notes/Update.module.css
+++ b/src/Notes/Update.module.css
@@ -32,6 +32,7 @@
     max-height: 100px;
     font-size: 1rem;
     padding-left: 5px;
+    overflow: hidden;
 }
 
 .modalInput, .modalTextarea {
